add recover middleware and rename some files/dirs

--- a/templates/new.html
+++ b/templates/new.html
@@ -30,7 +30,7 @@
         <div class="centered">
             <div hx-ext="client-side-templates">
                 <form
-                    hx-post="http://localhost:8080/shorten"
+                    hx-post="/shorten"
                     hx-ext="json-enc"
                     hx-swap="innerHTML"
                     hx-target="#shortURL"
